Fixed layout issues

--- a/src/components/Forms/Form.module.css
+++ b/src/components/Forms/Form.module.css
@@ -10,7 +10,7 @@
 
 .form-container form {
 	width: 100%;
-	height: 90vh;
+	height: 100vh;
 	margin: 0 auto;
 	padding: 0.5rem;
 	background: var(--color-secondary);
@@ -42,7 +42,6 @@
 	border-radius: 0.25rem;
 	padding: 0.5rem;
 	margin: 0.5rem 0;
-	text-transform: lowercase;
 }
 
 .form-container input:focus {
